--- a/css/main-gmic.css
+++ b/css/main-gmic.css
@@ -1,6 +1,6 @@
 html {background-image: none; background-color: #fff;}
 body {background: transparent url(../images/tile.gif) 0 0 repeat;}
-#wrapper {background: transparent url(../images/header-bg-2.gif) 0 0 repeat-x;}
+#wrapper {background: #212121 url(../images/gmic-main-title.png) center -51px no-repeat;}
 
 #header {margin: 0 auto; width: 960px; position: relative;}
 
@@ -8,19 +8,27 @@ body {background: transparent url(../images/tile.gif) 0 0 repeat;}
 
 #logo-area #logo {padding:0;}
 
-#logo-area #logo a {display: block; background: transparent url(../images/gmic-main-title.png) -76px 0px no-repeat; width: 960px; height:0px; margin:0; overflow: hidden; padding-top: 89px;}
+#logo-area #logo a {display: block; background: transparent url(../images/gmic-main-title.png) center -57px no-repeat; width: 960px; height:0px; margin:0; overflow: hidden; padding-top: 189px;}
 
-#top-menu {position:absolute; right: 30px; top: -14px;}
+#top-menu {position:absolute; right: 0px; top: -14px;}
 #top-menu li {background-color: #333; padding:2px 4px 2px 4px;}
 
-#main-area {background: transparent url(../images/tile.gif) 0 0 repeat; }
-#content-area {padding: 20px 0 43px 0; background: transparent url(../images/divider.gif) center 50px no-repeat; }
+#main-area {background: transparent url(../images/content-bg.jpg) center 0 no-repeat; }
+#content-area {
+	padding: 4px 0 20px 0; 
+	background: transparent url(../images/divider.gif) center 50px no-repeat; 
+	-webkit-box-shadow: 0px -2px 12px rgba(0, 0, 0, 0.5); 
+	-moz-box-shadow: 0px -2px 12px rgba(0, 0, 0, 0.5); 
+	box-shadow: 0px -2px 12px rgba(0, 0, 0, 0.5); 
+}
 
 .post-content p.beijing {padding-top: 0;}
 .post-content p.beijing img {margin:0; margin-top: -5px;}
-.post-content p.beijing {margin:0 40px 0 0;}
-.post-content p.silicon {margin: 0 0 0 -36px;}
+.post-content p.beijing {margin:0 10px 0 0;}
+.post-content p.silicon {margin: 0 0 0 10px;}
 
-.footer_wrap { background-color: #fff; padding-top:0;}
+.footer_wrap { background-color: #fff; padding-top:0; border-top: 1px solid #ccc;}
 #main_footer {width:960px; margin: 0 auto;background-image: none; text-align: center;}
 #main_footer .social-buttons {width:116px; margin: 0 auto; }
+
+table, table td {border: none;}
