--- a/css/main-gmic.css
+++ b/css/main-gmic.css
@@ -32,3 +32,32 @@ body {background: transparent url(../images/tile.gif) 0 0 repeat;}
 #main_footer .social-buttons {width:116px; margin: 0 auto; }
 
 table, table td {border: none;}
+
+/*---------------------[speaker slider homepage]-------------------*/
+	#speaker_slider.image_carousel {
+		background-image: none;
+		background-color: transparent;
+		-moz-box-shadow:    none;
+	    -webkit-box-shadow: none;
+	    box-shadow:         none;
+	    border-top: 0px solid #fff;
+	    padding: 0 0 28px 0;
+	}
+	#foo1 div {height: 150px;width: 160px;float: left;}
+		#foo1 li {height: 150px;width: 122px;float: left; display: block; margin-left: 0;}
+	#foo1 span {display: block;text-align:center; color: #999;}
+	#foo1 a {margin:0 auto; float: none; display:block; width: 90px; height: 90px; background: transparent url(images/keynote-speaker-icon_11.png) 0 0 no-repeat;}
+		#speaker2 a {background-image: url(../images/keynote-speaker-icons_03.png);}
+		#speaker3 a {background-image: url(../images/keynote-speaker-icons_07.png);}
+		#speaker4 a {background-image: url(../images/keynote-speaker-icons_21.png);}
+		#speaker5 a {background-image: url(../images/keynote-speaker-icons_09.png);}
+		#speaker6 a {background-image: url(../images/keynote-speaker-icons_11.png);}
+		#speaker7 a {background-image: url(../images/keynote-speaker-icons_25.png);}
+		#speaker8 a {background-image: url(../images/keynote-speaker-icons_05.png);}
+		#speaker9 a {background-image: url(../images/keynote-speaker-icons_24.png);}
+		#speaker10 a {background-image: url(../images/keynote-speaker-icons_19.png);}
+		#speaker11 a {background-image: url(../images/keynote-speaker-icons_22.png);}
+		#speaker12 a {background-image: url(../images/keynote-speaker-icons_23.png);}
+	#foo1 a:hover {background-position: 0px -92px;}
+	#foo1 #speaker1 a {}
+	#speaker_slider.image_carousel p { /*color: #5a77b7;*/ color: #fff; margin: 0 auto 10px auto; padding-bottom: 0px;width: 150px; border-bottom: 0px solid #d7e0f3; font-size: 16px;text-align: center;  font-family: "HelveticaNeue57Condensed", "Helvetica Neue Condensed", "Helvetica", sans-serif;}
